--- a/Solutions/587998_Uebung_7/index.html
+++ b/Solutions/587998_Uebung_7/index.html
@@ -12,7 +12,7 @@
 	      }
 	    </style>
 	    <script src="../../p5/p5.js"></script>
-	    <script src="587998_Uebung_5_matrix.js"></script>							<!-- main programm -->
+	    <script src="587998_Uebung_7.js"></script>							<!-- main programm -->
 	    <script src="addOns.js"></script>								<!-- for later use, subroutines for example  -->
 	</head>
 
